# zeroth

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  conftest.py  noxfile.py  pyproject.toml
.github/: CODEOWNERS  CONTRIBUTING.md
.github/workflows/: cd.yml  ci.yml  labeler.yml  ossar.yml
src/zeroth/: __init__.py
tests/: test_unit.py
